--- a/angular.json
+++ b/angular.json
@@ -58,7 +58,7 @@
                 {
                   "type": "anyComponentStyle",
                   "maximumWarning": "5kb",
-                  "maximumError": "10kb"
+                  "maximumError": "1mb"
                 }
               ]
             }
