--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.0.1",
     "@ngbmodule/material-carousel": "^0.7.1",
     "bootstrap": "^4.5.3",
+    "moment": "^2.29.1",
     "ngx-color-picker": "^10.1.0",
     "ngx-image-viewer": "^1.0.13",
     "rxjs": "~6.6.0",
